# tetra

./: .clang-format  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  commit_tetra.sh  dual_push.sh  license_texts.cpp  licenses.cpp  licenses.h  log.h  tetra.cpp  tetra.h  tetra_core.cpp  tetra_core.h  tetra_gl.cpp  tetra_gl.h  tetra_internal.h  tetra_sdl_gpu.cpp  tetra_sdl_gpu.h  tetra_vulkan.cpp  tetra_vulkan.h
gui/: console.cpp  console.h  gui_registrar.cpp  gui_registrar.h  imconfig.h  imgui.h  imgui_extracts.cpp  imgui_extracts.h  imgui_internal.h  overlay_loading.cpp  overlay_loading.h  overlay_performance.cpp  overlay_performance.h  physfs_browser.cpp  proggy_tiny.cpp  styles.cpp  styles.h
gui/imgui/: .clang-format  .gitattributes  imconfig.h  imgui.h
gui/imgui-1.91.1/: imconfig.h  imgui.h
gui/imgui-1.91.1/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp
gui/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_sdlgpu3_shaders.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
gui/imgui/docs/: CHANGELOG.txt  EXAMPLES.md  FAQ.md  README.md
gui/imgui/examples/example_sdl2_vulkan/: Makefile
gui/imgui/examples/example_sdl3_directx11/: example_sdl3_directx11.vcxproj  example_sdl3_directx11.vcxproj.filters
gui/imgui/examples/example_sdl3_metal/: main.mm
gui/imgui/examples/example_sdl3_vulkan/: Makefile
gui/imgui/misc/cpp/: imgui_stdlib.h
gui/imgui/misc/debuggers/: imgui_lldb.py
util/: cli_parser.cpp  cli_parser.h  convar.cpp  convar.h  convar_file.cpp  convar_file.h  debugbreak.h  environ_parser.cpp  environ_parser.h  misc.cpp  misc.h  stb_rect_pack.h  stb_sprintf.h  stbi.c  stbi.h
util/physfs/: physfs.h  physfs_internal.h  physfssdl3.h
util/physfs/physfs/: CMakeLists.txt  upstream.txt
util/physfs/physfs-74c3054/: .clang-format  CMakeLists.txt
util/physfs/physfs/extras/: physfssdl3.c  physfssdl3.h
util/stb/: stb_image.h  stb_rect_pack.c  stb_sprintf.c  stbi.c
